# tspl_label_printer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample.env
.github/workflows/: docker-dev.yml  docker.yml  pypi.yml  tests.yml
deploy/: install.sh
docs/: BUILD.md  README.docker.md  README.pypi.md  TESTING.md  advanced-usage.md  configuration.md  design.md  developing.md  roadmap.md  setup.md  updating.md
src/labeljetty/: __main__.py  app.py  config.py  testbench.py  update.py
src/labeljetty/core/: db.py  logging.py  sqltypes.py
src/labeljetty/integrations/: homebox.py
src/labeljetty/printer/: __init__.py  connection.py  render.py  tspl.py
src/labeljetty/service/: worker.py
src/labeljetty/web/: api.py  app.py  auth.py  password.py  ui.py
src/labeljetty/web/static/: style.css
src/labeljetty/web/templates/: _homebox.html  _homebox_results.html  _jobs.html  _preview.html  _print_result.html  _status.html  _update.html  base.html  homebox_setup.html  index.html  login.html
tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_connection.py  test_db.py  test_homebox.py  test_render.py  test_status_message.py  test_tspl.py  test_ui.py  test_update.py  test_worker.py
